--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,6 @@
-<%= form_for :task do |f|-%>
-    <%= f.text_field :name, placeholder: 'name' %>
-    <%= f.text_field :description, placeholder: 'description' %>
+<%= form_for @task, url: update_task_path(@task.id.to_s) do |f| -%>
+    <%= f.hidden_field :id, value: @task.id %>
+    <%= f.text_field :name, value: @task.name %>
+    <%= f.text_field :description, value: @task.description %>
     <%= f.submit "save" %>
 <% end %>
